--- a/style.css
+++ b/style.css
@@ -63,4 +63,173 @@ nav div a{
     display: block;
 }
 
+.library{
+    background-color: #121212;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;flex-direction: column;
+    padding: 4px 8px;
+    color: #b3b3b3;
+    font-weight:600;
+    font-size: 14px;
+    margin-top: 10px;
+    width: 300px;
+}
 
+.library .library__content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.library .library__button{
+    display: flex;
+    margin-right: 10px;
+    color: #b3b3b3;
+    background-color: transparent;
+    border: 0px;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    padding: 20px 10px;
+}
+
+.library .library__button .material-symbols-outlined {
+    font-size: 20px;
+    margin-right: 10px;
+    font-weight: 300;
+    padding-right: 8px;
+}
+
+ span.material-symbols-outlined.plus{
+    margin: 24px 10px;
+}
+
+.section-playlist__content{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    background-color: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 8px 0;
+    padding: 16px 20px;
+    flex-direction: column;
+    border-radius:10px ;
+}
+
+.section-playlist__content .text{
+    padding-bottom: 14px;
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+}
+
+.section-playlist__content .title{
+    font-weight: 700;
+}
+
+.section-playlist__content .subtitle{
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist__content  .section-playlist__button{
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    border: 0;
+    width: 113px;
+    margin-top: 12px;
+}
+
+.sidebar .cookies{
+    margin: 25px 20px;
+}
+
+.sidebar .cookies a{
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+}
+.sidebar .cookies a:hover{
+    text-decoration: underline;
+}
+
+.languages .languages__button {
+    
+    position: relative;
+    display: inline-flex;
+    background-color: transparent;
+    border: 1px solid #878787;
+    color: #fff;
+    cursor: pointer;
+    align-items: center;
+    font-weight: 700;
+    width: 190px;
+    height: 35px;
+    margin: 8px;
+   border-radius: 20px;
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+    background-image: linear-gradient(90deg,#af2896,#509bf5);
+    margin: 0 12px 12px 12px; 
+    width: 97vw;
+    height: 70px;
+    font-family: CircularSp,CircularSp-Arab,CircularSp-Hebr,CircularSp-Cyrl,CircularSp-Grek,CircularSp-Deva,var(--fallback-fonts,sans-serif);
+
+}
+
+.footer-rodape{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    
+    flex-direction: column;
+    padding: 11px 0px 7px 15px;
+}
+
+.footer-rodape p{
+    color: #fff;
+    font-size: 14px;
+   
+
+}
+.footer-rodape
+.footer-text{
+   font-size: 16px;
+}
+
+
+.button-footer{
+   
+    margin-top: auto;
+    margin-right:  30px;
+    margin-bottom: auto;
+    border-radius: 9999px;
+    width: 200px;
+    height: 48px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    
+    border: 0;
+}
